Fixed PHP files alignment

--- a/css/style.css
+++ b/css/style.css
@@ -306,7 +306,12 @@ table *{
     color: #830086;
     cursor: pointer;
 }
+/* PHP Pages */
 
+#page-container p{
+    width: 80vw;
+    margin: auto;
+}
 
 /* Footer */
 
